# textsearch

./: .gitignore  .gitmodules  Makefile  README.md  bm25_module.py  docker-compose.yml  idea.md  pyproject.toml  pyrightconfig.json  requirements.txt  run_benchmark.py
.claude/memory/: MEMORY.md  benchmark_run_results.md
.omc/: .project-memory.json.tmp.0bd25afb-2ef1-407f-87cb-6b90869d7bd2  project-memory.json
benchmark/: README.md  eval.py  report.py  runner.py
benchmark/data/: __init__.py  load_ezis.py  load_mmarco.py  load_namuwiki.py
data/ezis/: chunks.json  corpus.json  queries.json
data/miracl/: docs_ko_miracl.json  queries_dev.json
data/phase8/: query_embs_ezis.json  query_embs_miracl.json
docs/images/: generate_charts.py
docs/plan/: README.md  phase0_data_prep.md  phase1_morphological_analyzers.md  phase2_tsvector_korean.md  phase3_native_bm25.md  phase4_bm25_vs_neural.md  phase5_production_pg.md  phase5_system_comparison.md  phase6_system_comparison.md  phase6_textsearch_fork.md  phase6_vectorchord_bm25.md  phase7_pgsearch_fork.md  phase7_scaling_comparison.md  phase7_textsearch_fork.md  phase8_pgsearch_fork.md  phase8_system_comparison.md  phase9_system_comparison.md
docs/results/: README.md  phase1_morphological_analyzers.md  phase2_tsvector_korean.md  phase3_native_bm25.md  phase4_bm25_vs_neural.md  phase5_production_pg.md  phase7.md  phase7_pg_best_stack.md  phase8.md  phase8_compare_es.md  phase8_compare_vespa.md  phase8_qdrant.md  phase8_system_comparison.md
docs/source-analysis/: bm25_implementations_comparison.md  (+3 more)
(+87 files in other folders)
